--- a/wwr/index.html
+++ b/wwr/index.html
@@ -33,8 +33,8 @@
         <h1 class="contact">Home</h1>
 
         <section>
-        <img src="images/hero_home_page.webp" alt="main hero image">
-        <h2>Come and Enjoy the fun of White Water Rafting</h2>
+            <img src="images/hero_home_page.webp" alt="main hero image">
+            <h2>Come and Enjoy the fun of White Water Rafting</h2>
         </section>
 
         <section>
@@ -66,10 +66,12 @@
         </section>
 
         <section>
-            <h2>Purpose</h2>
-            <p>The White Water Rafting Comompany is  </p>
+            <h2>Our Purpose</h2>
+            <p>We endeavor to provide the safest and the most enjoyable rafting experience possible. And pride ourselves in the lastest technology and up to date rafting procedures with highly experienced rafting guides, to deliver an exhilarating and memorable experience. Every day, everytime, and 100% satisfaction.</p>
             <h2>Offerings</h2>
-            <p>sdfsdf</p>
+            <li>We offer an experience of a lifetime</li>
+                <ul>rafting angel falls.</ul>
+            
             <img src="images/home1.webp" alt="purpose image">
             <img src="images/home2.webp" alt="Offering image">
         </section>
