--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -38,6 +38,311 @@
                 before June 2025 we will give you a 25% discount on all package & a free teddy bear.</p>
         </section>
 
+        <section>
+            <img src="images/angelfalls.webp" alt="angel falls rafting">
+            <p>The beautiful Angel Falls, where you will raft this waterfall at a height of 807 metres and float down
+                safely to the ground floor. Its absolutely safe, with a beautiful panaramic view of Canaima National
+                Park. Parachutes are provided.</p>
+
+            <img src="images/crochippo.webp" alt="crocodile river rafting">
+            <p>Raft down the beautiful Crocodile River. Kind and loving hippos await you, with cute and cuddly
+                crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. m100% safe.</p>
+
+            <img src="images/piranha.webp" alt="amazon river rafting">
+            <p>Ever rafted the Amazon River. Well this is your chance. It should take you 4 months to raft its
+                approximate length of 6,400 km. We give u a free bottle of water and one sandwich to last you the
+                distance. This food is mainly to feed the piranhas, and if you get hungry, there is free vegetation to
+                consume.</p>
+
+            <img src="images/boltonstrid.jpg" alt="bolton stride rafting">
+            <p>Rafting the Bolton Strid sucks you and the raft underwater, where whirlpools and vorticies thrash you
+                against sides and you are squeezed through a variety of hidden cavens for an exhilirating ride.
+                Eventually, you reappear safely about 10 metres down stream.</p>
+
+            <img src="images/rio-tinto.webp" alt="rio tinto river">
+            <p>The beautiful polluted Rio Tinto rafting. The striking red color is just centuries of extreme pollution
+                making it highly acidic. Don't worry if you fall in, we have given you a rubber duck, that neutralizes
+                the river, preventing any harmful effects to you. If you don't believe us, try it for yourself.</p>
+        </section>
+
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="colgroup" colspan="3">Destinations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <section>
+                        <tr>
+                            <th scope="row">Site:</th>
+                            <th scope="col" colspan="">1. Angel Falls</th>
+                            <th>Itinerary</th>
+                        </tr>
+                        <tr>
+                            <th scope="col" colspan="2">Finance</th>
+                            <td rowspan="4">
+                                <ol>
+                                    <li>Meet at hotel and prepare for rafting next day</li>
+                                    <li>arrive at bus stop at 9am</li>
+                                    <li>prepare raft and hike to destination</li>
+                                    <li>begin rafting</li>
+                                    <li>raft Angel Falls</li>
+                                    <li>Retire to hotel for second, 3rd day.</li>
+                                </ol>
+                                <ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <ul>
+                                    <li>25% less airplane tickets</li>
+                                    <li>free parachute (if needed)</li>
+                                    <li>accomodation included</li>
+                                    <li>total cost $7,525</li>
+                                </ul>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="col">Hightlights</th>
+                            <th scope="col">What to bring</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>beautiful scenary</li>
+                                    <li>lavish hotel service</li>
+                                    <li>Over 800 metres of shear rafting</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>umbrella</li>
+                                    <li>shoes</li>
+                                    <li>change of clothes</li>
+                                </ul>
+                            </td>
+                        </tr>
+
+                    </section>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="3"></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="colgroup" colspan="3">Destinations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <section>
+                        <tr>
+                            <th scope="row">Site:</th>
+                            <th scope="col" colspan="">2. Crocodile River</th>
+                            <th>Itinerary</th>
+                        </tr>
+                        <tr>
+                            <th scope="col" colspan="2">Finance</th>
+                            <td rowspan="4">
+                                <ol>
+                                    <li>Meet at hotel room</li>
+                                    <li>Stay the night to get refresh for tommorro</li>
+                                    <li>Arise in the morning to catch bus to Pelindaba</li>
+                                    <li>10am - begin rafting</li>
+                                    <li>Retire to hotel</li>
+                                    <li>Repeat for two more days.</li>
+                                </ol>
+                                <ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <ul>
+                                    <li>Free wifi</li>
+                                    <li>free drink of water</li>
+                                    <li>Pay extra for accomodation</li>
+                                    <li>total cost $10,378</li>
+                                </ul>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="col">Hightlights</th>
+                            <th scope="col">What to bring</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>cheap petrol</li>
+                                    <li>10% of lollies</li>
+                                    <li>Thousands of cute crocodiles roam the waterways.</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>croc & hippo repellant spray</li>
+                                    <li>jandals</li>
+                                    <li>toothbrush</li>
+                                </ul>
+                            </td>
+                        </tr>
+
+                    </section>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="3"></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="colgroup" colspan="3">Destinations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <section>
+                        <tr>
+                            <th scope="row">Site:</th>
+                            <th scope="col" colspan="">3. Amazon River</th>
+                            <th>Itinerary</th>
+                        </tr>
+                        <tr>
+                            <th scope="col" colspan="2">Finance</th>
+                            <td rowspan="4">
+                                <ol>
+                                    <li>Travel to the start of the river</li>
+                                    <li>Begin rafting</li>
+                                    <li>Acoomodation is sleeping in the bush</li>
+                                    <li>begin rafting</li>
+                                    <li>And raft for the next 4 months</li>
+                                </ol>
+                                <ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <ul>
+                                    <li>boat travel only</li>
+                                    <li>free accomodation (sleep in the bush)</li>
+                                    <li>Pay cartels for rafting access</li>
+                                    <li>total cost $11,000</li>
+                                </ul>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="col">Hightlights</th>
+                            <th scope="col">What to bring</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>4 months of rafting</li>
+                                    <li>helpful cartels</li>
+                                    <li>change phone via electric eel</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>a sandwich and lollies</li>
+                                    <li>insect repellant</li>
+                                    <li>smart phone</li>
+                                </ul>
+                            </td>
+                        </tr>
+
+                    </section>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="3"></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="colgroup" colspan="3">Destinations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <section>
+                        <tr>
+                            <th scope="row">Site:</th>
+                            <th scope="col" colspan="">4. Bolton Strid</th>
+                            <th>Itinerary</th>
+                        </tr>
+                        <tr>
+                            <th scope="col" colspan="2">Finance</th>
+                            <td rowspan="4">
+                                <ol>
+                                    <li>Meet at hotel and prepare for rafting next day</li>
+                                    <li>arrive at bus stop at 9am</li>
+                                    <li>prepare raft and hike to destination</li>
+                                    <li>begin rafting</li>
+                                    <li>raft Angel Falls</li>
+                                    <li>Retire to hotel for second, 3rd day.</li>
+                                </ol>
+                                <ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <ul>
+                                    <li>25% less airplane tickets</li>
+                                    <li>free parachute (if needed)</li>
+                                    <li>accomodation included</li>
+                                    <li>total cost $7,525</li>
+                                </ul>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="col">Hightlights</th>
+                            <th scope="col">What to bring</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>beautiful scenary</li>
+                                    <li>lavish hotel service</li>
+                                    <li>Over 800 metres of shear rafting</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>umbrella</li>
+                                    <li>shoes</li>
+                                    <li>change of clothes</li>
+                                </ul>
+                            </td>
+                        </tr>
+
+                    </section>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="3"></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
 
     </main>
     <footer>
