--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,51 +30,70 @@
         </nav>
     </header>
     <main>
-        <h1 class="contact">Home</h1>
+        <h1 class="subhead">Home</h1>
 
-        <section>
-            <img src="images/hero_home_page.webp" alt="main hero image">
-            <h2>Come and Enjoy the fun of White Water Rafting</h2>
+        <section class="homehero">
+            <img class="picture" src="images/hero_home_page.webp" alt="main hero image">
+            <div>
+                <h2>Come and Enjoy the fun of White Water Rafting</h2>
+            </div>
         </section>
 
-        <section>
-            <form>
-                <h2>Subscribe <b>NOW</b> to get your free montly newsletter.</h2>
-                <p>
-                    <label for="firstname">First Name</label>
-                    <input type="text" name="firstname" id="firstname">
-                </p>
+        <section class="homesection">
+            <section id="home1">
+                <h2>Our Purpose</h2>
+                <p>We endeavor to provide the safest and the most enjoyable rafting experience possible. And pride
+                    ourselves in the lastest technology and up to date rafting procedures with highly experienced
+                    rafting guides, to deliver an exhilarating and memorable experience. Every day, everytime, and 100%
+                    satisfaction.</p>
+            </section>
 
-                <p>
-                    <label for="secondname">Surname</label>
-                    <input type="text" name="secondname" id="secondname">
-                </p>
+            <section id="home2">
+                <h2>Offerings</h2>
+                <ul>We offer an experience of a lifetime</ul>
+                <li>rafting angel falls with a 800 m drop.</li>
+                <li>raft with crocodiles and hippos on Crocodile River</li>
+                <li>underwater rafting at the bolton strid</li>
+                <li>4 months of rafting the Amazon River</li>
+                <li>Raft polluted river Rio Tinto River. The river essential reverse aging elements that provide
+                    enhancements to your skin hair and eyes</li>
+            </section>
 
-                <p>
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email">
-                </p>
+            <section id="home3">
+                <img src="images/home1.webp" alt="purpose image">
+            </section>
+          
+            <section id="home4">
+                <form>
+                    <h2>Subscribe <b>NOW</b> to get your free montly newsletter.</h2>
+                    <p>
+                        <label for="firstname">First Name</label>
+                        <input type="text" name="firstname" id="firstname">
+                    </p>
 
-                <p>
-                    <button type="button">Sign me up NOW!</button>
-                </p>
-            </form>
+                    <p>
+                        <label for="secondname">Surname</label>
+                        <input type="text" name="secondname" id="secondname">
+                    </p>
+
+                    <p>
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email">
+                    </p>
+
+                    <p>
+                        <button type="button">Sign me up NOW!</button>
+                    </p>
+                </form>
+            </section>
+
+            <section id="home5">
+                <h2>Click <strong><a href="trips.html">here</a></strong> to know more about our trips options </h2>
+                <img src="images/home2.webp" alt="Offering image">
+            </section>
         </section>
 
-        <section>
-            <h2>Click <strong><a href="trips.html">here</a></strong> to know more about our trips options </h2>
-        </section>
 
-        <section>
-            <h2>Our Purpose</h2>
-            <p>We endeavor to provide the safest and the most enjoyable rafting experience possible. And pride ourselves in the lastest technology and up to date rafting procedures with highly experienced rafting guides, to deliver an exhilarating and memorable experience. Every day, everytime, and 100% satisfaction.</p>
-            <h2>Offerings</h2>
-            <li>We offer an experience of a lifetime</li>
-                <ul>rafting angel falls.</ul>
-            
-            <img src="images/home1.webp" alt="purpose image">
-            <img src="images/home2.webp" alt="Offering image">
-        </section>
 
 
     </main>
