--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="contact">About Us</h1>
+        <h1 class="subhead">About Us</h1>
 
         <div class="hero">
             <img src="images/rafting12_1024.webp" alt="hero picture">
