--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <h1 class="contact">Contact Us</h1>
+        <h1 class="subhead">Contact Us</h1>
 
         <section class="contactinfo">
             <h2 id="contact1">Contact Information</h2>
