--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting About Us</title>
-    <meta name="description" content="Overview our rafting company">
+    <title>White Water Rafting About Us and Founder Joe Biden</title>
+    <meta name="description" content="We are a highly intelligent group of rafting individuals and we would love you to find out more about our intriguing history. Joe Biden, founder and president will personally show you our offerings. ">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
