--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting Trips</title>
-    <meta name="description" content="trips offered by the company">
+    <title>White Water Rafting Destination Trips</title>
+    <meta name="description"
+        content="we offer the best rafting experience on the market. Our destinations have been highly sort after and we are among the top ten rafting companies that offer impressive rafting destinations">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -33,12 +34,6 @@
         <h1 class="subhead">Trips</h1>
 
         <section>
-            <h2>Like What you see.</h2>
-            <p>Click <em><a href="contact.html">here</a></em> to make an inquiry before bookings closed. If you book now
-                before June 2025 we will give you a 25% discount on all package & a free teddy bear.</p>
-        </section>
-
-        <section>
             <img class="picture" src="images/angelfalls.webp" alt="angel falls rafting">
             <p>The beautiful Angel Falls, where you will raft this waterfall at a height of 807 metres and float down
                 safely to the ground floor. Its absolutely safe, with a beautiful panaramic view of Canaima National
@@ -62,7 +57,6 @@
                             <th scope="col" colspan="2">Finance</th>
                             <td rowspan="4">
                                 <ol>
-                                    <li></li>
                                     <li>Arrive at Maiquetia Airport. Then take another flight to Canaima camp.</li>
                                     <li>Spend the night and then in the morning take a one-day boat ride to the falls.
                                         raft and hike to destination</li>
@@ -446,6 +440,15 @@
             </table>
         </section>
 
+        <section>
+            <div class="border">
+                <h2>Like What you see.</h2>
+                <p>Click <em><a href="contact.html">here</a></em> to make an inquiry before bookings closed. If you book
+                    now
+                    before June 2025 we will give you a 25% discount on all package & a free teddy bear.</p>
+            </div>
+        </section>
+
     </main>
     <footer>
         <p>&copy; | 2025 | White Water Rafting | Basky Keefe</p>
@@ -459,6 +462,7 @@
             <a href="https://www.kuaishou.com/new-reco">
                 <img src="images/kuaishou-icon.webp" alt="kuaishou-icon">
             </a>
+            <a href="https://app.moqups.com/AhH8I7t9p8Grv7tWMBMp22S35hbTBGBI/view/page/ad64222d5">wireframe</a>
         </nav>
     </footer>
 
