--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting Home Page</title>
-    <meta name="description" content="Home page of rafting site">
+    <meta name="description"
+        content="Find out more about what the White Water Rafting Company can offer you. Sign in  for our monthly newsletter so you don't missed out any important features.Come and see what we have to offer you">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -39,7 +40,7 @@
             </div>
         </section>
 
-        <section class="homesection">
+        <div class="homesection">
             <section id="home1">
                 <h2>Our Purpose</h2>
                 <p>We endeavor to provide the safest and the most enjoyable rafting experience possible. And pride
@@ -49,20 +50,21 @@
             </section>
 
             <section id="home2">
-                <h2>Offerings</h2>
-                <ul>We offer an experience of a lifetime</ul>
-                <li>rafting angel falls with a 800 m drop.</li>
-                <li>raft with crocodiles and hippos on Crocodile River</li>
-                <li>underwater rafting at the bolton strid</li>
-                <li>4 months of rafting the Amazon River</li>
-                <li>Raft polluted river Rio Tinto River. The river essential reverse aging elements that provide
-                    enhancements to your skin hair and eyes</li>
+                <h2>Offerings - We offer an experience of a lifetime</h2>
+                <ul>
+                    <li>rafting angel falls with a 800 m drop.</li>
+                    <li>raft with crocodiles and hippos on Crocodile River</li>
+                    <li>underwater rafting at the bolton strid</li>
+                    <li>4 months of rafting the Amazon River</li>
+                    <li>Raft polluted river Rio Tinto River. The river essential reverse aging elements that provide
+                        enhancements to your skin hair and eyes</li>
+                </ul>
             </section>
 
-            <section id="home3">
+            <div id="home3">
                 <img src="images/home1.webp" alt="purpose image">
-            </section>
-          
+            </div>
+
             <section id="home4">
                 <form>
                     <h2>Subscribe <b>NOW</b> to get your free montly newsletter.</h2>
@@ -91,7 +93,7 @@
                 <h2>Click <strong><a href="trips.html">here</a></strong> to know more about our trips options </h2>
                 <img src="images/home2.webp" alt="Offering image">
             </section>
-        </section>
+        </div>
 
 
 
