--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact the White Water Rafting Team</title>
-    <meta name="description" content="We offer the best rafting experience for all types of people. So contact us now, or speak with one of our assitants and they will guide you and answer any questions you may have.">
+    <meta name="description"
+        content="We offer the best rafting experience for all types of people. So contact us now, or speak with one of our assitants and they will guide you and answer any questions you may have.">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -46,7 +47,7 @@
                 <p>whitehouse@gmail.com</p>
             </div>
 
-            <div id="contact3">                
+            <div id="contact3">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d557.4934607789619!2d-77.03675388451057!3d38.89351234969156!2m3!1f359.62343096234304!2f34.20849356835787!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x89b7b7bcdecbb1df%3A0x715969d86d0b76bf!2sThe%20White%20House!5e1!3m2!1sen!2snz!4v1749729520557!5m2!1sen!2snz"
                     width="600" height="450" allowfullscreen="" loading="lazy"
@@ -77,13 +78,13 @@
             </div>
         </section>
 
-        <section >
+        <section>
             <form class="form">
 
                 <h2 id="contactform">Contact Form - Fill out the following form to get intouch with us:</h2>
-               
-                <fieldset>           
-                    <div>                        
+
+                <fieldset>
+                    <div>
                         <label for="firstname">First name</label>
                         <input type="text" name="1name" id="firstname">
                         <label for="surname">Surname</label>
@@ -136,7 +137,7 @@
     <footer>
         <p>&copy; | 2025 | White Water Rafting | Basky Keefe</p>
 
-        <nav class="socialmedia">           
+        <nav class="socialmedia">
             <a href="https://myspace.com/signin">
                 <img src="images/myspace-icon.png" alt="myspace-icon">
             </a>
