--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,7 +35,7 @@
         <h1 class="subhead">Trips</h1>
 
         <section>
-            <h2>Angel Falls</h2>
+            <h2 class="border">Angel Falls</h2>
             <img class="picture" src="images/angelfalls.webp" alt="angel falls rafting">
             <p>The beautiful Angel Falls, where you will raft this waterfall at a height of 807 metres and float down
                 safely to the ground floor. Its absolutely safe, with a beautiful panaramic view of Canaima National
@@ -113,7 +113,7 @@
         </section>
 
         <section>
-            <h2>Zambezi River</h2>
+            <h2 class="border">Zambezi River</h2>
             <img class="picture" src="images/crochippo.webp" alt="crocodile river rafting">
             <p>Raft down the beautiful Zambezi River. Kind and loving hippos await you, with cute and cuddly
                 crocodiles. Perfectly safe, these crocs are vegatarians and the hippos can't hurt a fly. m100% safe.</p>
@@ -194,7 +194,7 @@
         </section>
 
         <section>
-            <h2>Amazon River</h2>
+            <h2 class="border">Amazon River</h2>
             <img class="picture" src="images/piranha.webp" alt="amazon river rafting">
             <p>Ever rafted the Amazon River. Well this is your chance. It should take you 4 months to raft its
                 approximate length of 6,400 km. We give u a free bottle of water and one sandwich to last you the
@@ -282,7 +282,7 @@
         </section>
 
         <section>
-            <h2>Bolton Strid</h2>
+            <h2 class="border">Bolton Strid</h2>
             <img class="picture" src="images/boltonstrid.jpg" alt="bolton stride rafting">
             <p>Rafting the Bolton Strid sucks you and the raft underwater, where whirlpools and vorticies thrash you
                 against sides and you are squeezed through a variety of hidden cavens for an exhilirating ride.
@@ -365,7 +365,7 @@
         </section>
 
         <section>
-            <h2>Rio Tinto River</h2>
+            <h2 class="border">Rio Tinto River</h2>
             <img class="picture" src="images/rio-tinto.webp" alt="rio tinto river">
             <p>The beautiful polluted Rio Tinto rafting. The striking red color is just centuries of extreme pollution
                 making it highly acidic. Don't worry if you fall in, we have given you a rubber duck, that neutralizes
