--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -57,7 +57,7 @@
 
                     <tr>
                         <th scope="col" colspan="2">Finance</th>
-                        <td rowspan="4">
+                        <td rowspan="4" class="tabletextalign">
                             <ul>
                                 <li>Arrive at Maiquetia Airport. Then take another flight to Canaima camp.</li>
                                 <li>Spend the night and then in the morning take a one-day boat ride to the falls.</li>
@@ -70,7 +70,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="2">
+                        <td colspan="2" class="tabletextalign">
                             <ul>
                                 <li>airplane tickets - $5,590</li>
                                 <li>boat ride - $348</li>
@@ -89,14 +89,14 @@
 
                     <tr>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>beautiful scenary</li>
                                 <li>lavish hotel service</li>
                                 <li>Over 800 metres of shear rafting</li>
                             </ul>
                         </td>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>umbrella</li>
                                 <li>shoes</li>
                                 <li>change of clothes</li>
@@ -132,7 +132,7 @@
 
                     <tr>
                         <th scope="col" colspan="2">Finance</th>
-                        <td rowspan="4">
+                        <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Fly to Kruger Mpumalanga Airport, then take the bus Kruger Eden Lodge</li>
                                 <li>Your guide Newscum will lead outside to Crocodile river with a raft color of
@@ -151,7 +151,7 @@
 
                     <tr>
                         <td colspan="2">
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>Plane $3,700</li>
                                 <li>Free wifi</li>
                                 <li>free drink of water</li>
@@ -169,7 +169,7 @@
 
                     <tr>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>cheap petrol</li>
                                 <li>10% off lollies</li>
                                 <li>Thousands of cute crocodiles roam the waterways.</li>
@@ -177,7 +177,7 @@
                         </td>
 
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>croc & hippo repellant spray</li>
                                 <li>jandals</li>
                                 <li>toothbrush</li>
@@ -214,7 +214,7 @@
                     </tr>
                     <tr>
                         <th scope="col" colspan="2">Finance</th>
-                        <td rowspan="4">
+                        <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Travel to Iquitos, Peru and stay at the Amazon Dream Hotel</li>
                                 <li>In the morning walk a few steps to the beginning of the Amazon River. There you
@@ -223,7 +223,7 @@
                                 </li>
                                 <li>Continue Rafting in this order</li>
                                 <li>
-                                    <ul>
+                                    <ul class="tabletextalign">
                                         <li>Jutai (450 km) - Hotel Piscina</li>
                                         <li>Manaus (900 km) - Hotel Saint Paul</li>
                                         <li>Mararu (750 km) - Hotel Acay</li>
@@ -238,7 +238,7 @@
 
                     <tr>
                         <td colspan="2">
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>Airplane hotel costs - $9,500</li>
                                 <li>Total hotel costs - $9,500</li>
                                 <li>free accomodation (sleep in the bush)</li>
@@ -256,7 +256,7 @@
 
                     <tr>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>4 months of rafting</li>
                                 <li>helpful cartels</li>
                                 <li>change phone via electric eel</li>
@@ -264,7 +264,7 @@
                         </td>
 
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>a sandwich and lollies</li>
                                 <li>insect repellant</li>
                                 <li>smart phone</li>
@@ -302,7 +302,7 @@
 
                     <tr>
                         <th scope="col" colspan="2">Finance</th>
-                        <td rowspan="4">
+                        <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Travel to Leeds and take the bus to the Devonshire Arms Hotel and take the night
                                     to refresh</li>
@@ -321,7 +321,7 @@
 
                     <tr>
                         <td colspan="2">
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>Airplane cost $2,600</li>
                                 <li>$600 at Devonshire Hotel</li>
                                 <li>Car hire - $240 per day</li>
@@ -338,7 +338,7 @@
 
                     <tr>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>One of the beautiful places in Yorkshire - 17th & 19th century enviorment</li>
                                 <li>Extreme underwater rafting</li>
                                 <li>Powerful undercurrent pulls anybody underwater</li>
@@ -347,7 +347,7 @@
                         </td>
 
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>underwater night goggles</li>
                                 <li>dive gear (if needed)</li>
                                 <li>BMX helmet</li>
@@ -385,7 +385,7 @@
 
                     <tr>
                         <th scope="col" colspan="2">Finance</th>
-                        <td rowspan="4">
+                        <td rowspan="4" class="tabletextalign">
                             <ol>
                                 <li>Arrive in Spain and stay at the Hotel Vazquez Diaz</li>
                                 <li>Our guide Shiff will take you to the river where you will start rafting.</li>
@@ -399,7 +399,7 @@
 
                     <tr>
                         <td colspan="2">
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>Airplane cost $6,600</li>
                                 <li>bus ticket $3</li>
                                 <li>Hotel - $3500</li>
@@ -418,7 +418,7 @@
 
                     <tr>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>The unique color is cause by high levels of iron and heavy metals; a must
                                     enhancing your skin, hair & eyes.</li>
                                 <li>Over 5000 years of ore mining has allowed some microorganisms to thrive</li>
@@ -428,7 +428,7 @@
                             </ul>
                         </td>
                         <td>
-                            <ul>
+                            <ul class="tabletextalign">
                                 <li>umbrella</li>
                                 <li>shoes</li>
                                 <li>change of clothes</li>
